# ListRevFunctions

./: README.md  pyproject.toml  setup.py  tempCodeRunnerFile.python
src/: ListOperations.py  __init__.py  test.py
src/ListRevFunctions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
