[project]
name = "ListRevFunctions"
version = "0.1.0"
authors = [
  { name="Mariyala Rohith", email="mariyalarohith29@gmail.com" },
]
description = "Using this package you can petform various operations on two lists with second list reversed like addition, subtraction, multiplication, division, floor division, modulo, power, and, or"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mrohith29/ListRevFunctions"
Issues = "https://github.com/mrohith29/ListRevFunctions/issues"